expansion/src/main/java/ref/schemaParser.java
// Generated from ref/schema.g4 by ANTLR 4.7.1
package ref;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class schemaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, TRANSFER=8, TRYEXPAND=9, 
		RELATION=10, FUTURECHECK=11, EVENT=12, UNIQUE=13, ENTITY=14, FD=15, RULE=16, 
		FOR=17, DECLARE=18, SET=19, WITH=20, BEGIN=21, END=22, EXIST=23, EXCEPT=24, 
		MACRO=25, MARROW=26, IMPLIES=27, LPAR=28, RPAR=29, LT=30, GT=31, LEQ=32, 
		GEQ=33, COMMA=34, TYPE=35, NEG=36, BOT=37, VALUE=38, STRING=39, WS=40, 
		COMMENT=41, LINE_COMMENT=42;
	public static final int
		RULE_program = 0, RULE_commands = 1, RULE_except = 2, RULE_intime = 3, 
		RULE_inspace = 4, RULE_setOptions = 5, RULE_paramDeclared = 6, RULE_stringlist = 7, 
		RULE_moreClauses = 8, RULE_clause = 9, RULE_forall = 10, RULE_exists = 11, 
		RULE_predicates = 12, RULE_angestrengend = 13, RULE_lbound = 14, RULE_ubound = 15;
	public static final String[] ruleNames = {
		"program", "commands", "except", "intime", "inspace", "setOptions", "paramDeclared", 
		"stringlist", "moreClauses", "clause", "forall", "exists", "predicates", 
		"angestrengend", "lbound", "ubound"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'.'", "'in time'", "'and space'", "'\\forall'", "'\\exists'", 
		"'notnull'", "'transfer'", "'try-expand'", "'relation'", "'future-check'", 
		"'event'", "'unique'", "'entity'", "'MVD'", "'rule'", "'for'", "'as'", 
		"'set'", "'with'", "'begin'", "'end'", "'exist'", "'except'", "'macro'", 
		"'->>'", "'=>'", "'('", "')'", "'<'", "'>'", "'<='", "'>='", "','", "':'", 
		"'~'", "'False'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "TRANSFER", "TRYEXPAND", 
		"RELATION", "FUTURECHECK", "EVENT", "UNIQUE", "ENTITY", "FD", "RULE", 
		"FOR", "DECLARE", "SET", "WITH", "BEGIN", "END", "EXIST", "EXCEPT", "MACRO", 
		"MARROW", "IMPLIES", "LPAR", "RPAR", "LT", "GT", "LEQ", "GEQ", "COMMA", 
		"TYPE", "NEG", "BOT", "VALUE", "STRING", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "schema.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public schemaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(32);
					commands();
					setState(33);
					match(T__0);
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(40);
			commands();
			setState(41);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandsContext extends ParserRuleContext {
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
	 
		public CommandsContext() { }
		public void copyFrom(CommandsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Fdep_declareContext extends CommandsContext {
		public TerminalNode FD() { return getToken(schemaParser.FD, 0); }
		public TerminalNode FOR() { return getToken(schemaParser.FOR, 0); }
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public TerminalNode DECLARE() { return getToken(schemaParser.DECLARE, 0); }
		public List<StringlistContext> stringlist() {
			return getRuleContexts(StringlistContext.class);
		}
		public StringlistContext stringlist(int i) {
			return getRuleContext(StringlistContext.class,i);
		}
		public TerminalNode MARROW() { return getToken(schemaParser.MARROW, 0); }
		public Fdep_declareContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterFdep_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitFdep_declare(this);
		}
	}
	public static class Beginend_declareContext extends CommandsContext {
		public StringlistContext orig;
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public IntimeContext intime() {
			return getRuleContext(IntimeContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(schemaParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(schemaParser.END, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public TerminalNode UNIQUE() { return getToken(schemaParser.UNIQUE, 0); }
		public Beginend_declareContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterBeginend_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitBeginend_declare(this);
		}
	}
	public static class RuleContext extends CommandsContext {
		public TerminalNode RULE() { return getToken(schemaParser.RULE, 0); }
		public List<MoreClausesContext> moreClauses() {
			return getRuleContexts(MoreClausesContext.class);
		}
		public MoreClausesContext moreClauses(int i) {
			return getRuleContext(MoreClausesContext.class,i);
		}
		public TerminalNode IMPLIES() { return getToken(schemaParser.IMPLIES, 0); }
		public TerminalNode BOT() { return getToken(schemaParser.BOT, 0); }
		public TerminalNode WITH() { return getToken(schemaParser.WITH, 0); }
		public List<PredicatesContext> predicates() {
			return getRuleContexts(PredicatesContext.class);
		}
		public PredicatesContext predicates(int i) {
			return getRuleContext(PredicatesContext.class,i);
		}
		public RuleContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitRule(this);
		}
	}
	public static class Macro_expandContext extends CommandsContext {
		public TerminalNode TRYEXPAND() { return getToken(schemaParser.TRYEXPAND, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public TerminalNode FOR() { return getToken(schemaParser.FOR, 0); }
		public TerminalNode RELATION() { return getToken(schemaParser.RELATION, 0); }
		public TerminalNode EVENT() { return getToken(schemaParser.EVENT, 0); }
		public Macro_expandContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterMacro_expand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitMacro_expand(this);
		}
	}
	public static class Macro_definitionContext extends CommandsContext {
		public TerminalNode MACRO() { return getToken(schemaParser.MACRO, 0); }
		public List<TerminalNode> STRING() { return getTokens(schemaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(schemaParser.STRING, i);
		}
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public TerminalNode DECLARE() { return getToken(schemaParser.DECLARE, 0); }
		public TerminalNode COMMA() { return getToken(schemaParser.COMMA, 0); }
		public TerminalNode RULE() { return getToken(schemaParser.RULE, 0); }
		public List<MoreClausesContext> moreClauses() {
			return getRuleContexts(MoreClausesContext.class);
		}
		public MoreClausesContext moreClauses(int i) {
			return getRuleContext(MoreClausesContext.class,i);
		}
		public TerminalNode IMPLIES() { return getToken(schemaParser.IMPLIES, 0); }
		public TerminalNode BOT() { return getToken(schemaParser.BOT, 0); }
		public TerminalNode WITH() { return getToken(schemaParser.WITH, 0); }
		public List<PredicatesContext> predicates() {
			return getRuleContexts(PredicatesContext.class);
		}
		public PredicatesContext predicates(int i) {
			return getRuleContext(PredicatesContext.class,i);
		}
		public Macro_definitionContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterMacro_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitMacro_definition(this);
		}
	}
	public static class Transfer_macroContext extends CommandsContext {
		public StringlistContext orig;
		public StringlistContext dest;
		public TerminalNode TRANSFER() { return getToken(schemaParser.TRANSFER, 0); }
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public TerminalNode DECLARE() { return getToken(schemaParser.DECLARE, 0); }
		public List<StringlistContext> stringlist() {
			return getRuleContexts(StringlistContext.class);
		}
		public StringlistContext stringlist(int i) {
			return getRuleContext(StringlistContext.class,i);
		}
		public IntimeContext intime() {
			return getRuleContext(IntimeContext.class,0);
		}
		public Transfer_macroContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterTransfer_macro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitTransfer_macro(this);
		}
	}
	public static class Rel_delcareContext extends CommandsContext {
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public TerminalNode RELATION() { return getToken(schemaParser.RELATION, 0); }
		public TerminalNode EVENT() { return getToken(schemaParser.EVENT, 0); }
		public Rel_delcareContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterRel_delcare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitRel_delcare(this);
		}
	}
	public static class EnexistsContext extends CommandsContext {
		public TerminalNode ENTITY() { return getToken(schemaParser.ENTITY, 0); }
		public TerminalNode EXIST() { return getToken(schemaParser.EXIST, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public ExceptContext except() {
			return getRuleContext(ExceptContext.class,0);
		}
		public IntimeContext intime() {
			return getRuleContext(IntimeContext.class,0);
		}
		public InspaceContext inspace() {
			return getRuleContext(InspaceContext.class,0);
		}
		public EnexistsContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterEnexists(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitEnexists(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commands);
		int _la;
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RELATION:
			case EVENT:
				_localctx = new Rel_delcareContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				_la = _input.LA(1);
				if ( !(_la==RELATION || _la==EVENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(44);
				match(STRING);
				setState(45);
				match(LPAR);
				setState(46);
				stringlist();
				setState(47);
				match(RPAR);
				}
				break;
			case FD:
				_localctx = new Fdep_declareContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(FD);
				setState(50);
				match(FOR);
				setState(51);
				match(STRING);
				setState(52);
				match(DECLARE);
				setState(53);
				stringlist();
				setState(54);
				match(MARROW);
				setState(55);
				stringlist();
				}
				break;
			case RULE:
				_localctx = new RuleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(RULE);
				setState(58);
				moreClauses();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(59);
					match(WITH);
					setState(61); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(60);
						predicates();
						}
						}
						setState(63); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==STRING );
					}
				}

				setState(67);
				match(IMPLIES);
				setState(70);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
				case T__5:
				case NEG:
				case STRING:
					{
					setState(68);
					moreClauses();
					}
					break;
				case BOT:
					{
					setState(69);
					match(BOT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case ENTITY:
				_localctx = new EnexistsContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				match(ENTITY);
				setState(73);
				match(EXIST);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VALUE || _la==STRING) {
					{
					setState(74);
					stringlist();
					}
				}

				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXCEPT) {
					{
					setState(77);
					except();
					}
				}

				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(80);
					intime();
					}
				}

				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(83);
					inspace();
					}
				}

				}
				break;
			case MACRO:
				_localctx = new Macro_definitionContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(MACRO);
				setState(87);
				match(STRING);
				setState(88);
				match(LPAR);
				setState(89);
				stringlist();
				setState(90);
				match(RPAR);
				setState(91);
				match(DECLARE);
				setState(92);
				match(STRING);
				setState(93);
				match(COMMA);
				setState(94);
				match(RULE);
				setState(95);
				moreClauses();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(96);
					match(WITH);
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(97);
						predicates();
						}
						}
						setState(100); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==STRING );
					}
				}

				setState(104);
				match(IMPLIES);
				setState(107);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
				case T__5:
				case NEG:
				case STRING:
					{
					setState(105);
					moreClauses();
					}
					break;
				case BOT:
					{
					setState(106);
					match(BOT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case TRYEXPAND:
				_localctx = new Macro_expandContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				match(TRYEXPAND);
				setState(110);
				stringlist();
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FOR) {
					{
					setState(111);
					match(FOR);
					setState(112);
					_la = _input.LA(1);
					if ( !(_la==RELATION || _la==EVENT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			case UNIQUE:
			case BEGIN:
			case END:
				_localctx = new Beginend_declareContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==UNIQUE) {
					{
					setState(115);
					match(UNIQUE);
					}
				}

				setState(118);
				_la = _input.LA(1);
				if ( !(_la==BEGIN || _la==END) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(119);
				match(STRING);
				setState(120);
				match(LPAR);
				setState(121);
				((Beginend_declareContext)_localctx).orig = stringlist();
				setState(122);
				match(RPAR);
				setState(123);
				intime();
				}
				break;
			case TRANSFER:
				_localctx = new Transfer_macroContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				match(TRANSFER);
				setState(126);
				match(STRING);
				setState(127);
				match(LPAR);
				setState(128);
				((Transfer_macroContext)_localctx).orig = stringlist();
				setState(129);
				match(RPAR);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(130);
					intime();
					}
				}

				setState(133);
				match(DECLARE);
				setState(134);
				((Transfer_macroContext)_localctx).dest = stringlist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExceptContext extends ParserRuleContext {
		public TerminalNode EXCEPT() { return getToken(schemaParser.EXCEPT, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public ExceptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_except; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterExcept(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitExcept(this);
		}
	}

	public final ExceptContext except() throws RecognitionException {
		ExceptContext _localctx = new ExceptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_except);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(EXCEPT);
			setState(139);
			stringlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntimeContext extends ParserRuleContext {
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public IntimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterIntime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitIntime(this);
		}
	}

	public final IntimeContext intime() throws RecognitionException {
		IntimeContext _localctx = new IntimeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_intime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__2);
			setState(142);
			stringlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InspaceContext extends ParserRuleContext {
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public InspaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inspace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterInspace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitInspace(this);
		}
	}

	public final InspaceContext inspace() throws RecognitionException {
		InspaceContext _localctx = new InspaceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inspace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__3);
			setState(145);
			stringlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetOptionsContext extends ParserRuleContext {
		public SetOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setOptions; }
	 
		public SetOptionsContext() { }
		public void copyFrom(SetOptionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Set_relationContext extends SetOptionsContext {
		public TerminalNode RELATION() { return getToken(schemaParser.RELATION, 0); }
		public List<TerminalNode> STRING() { return getTokens(schemaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(schemaParser.STRING, i);
		}
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public TerminalNode COMMA() { return getToken(schemaParser.COMMA, 0); }
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public Set_relationContext(SetOptionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterSet_relation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitSet_relation(this);
		}
	}
	public static class Set_entityContext extends SetOptionsContext {
		public TerminalNode ENTITY() { return getToken(schemaParser.ENTITY, 0); }
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public Set_entityContext(SetOptionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterSet_entity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitSet_entity(this);
		}
	}
	public static class Set_eventContext extends SetOptionsContext {
		public TerminalNode EVENT() { return getToken(schemaParser.EVENT, 0); }
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public TerminalNode LPAR() { return getToken(schemaParser.LPAR, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(schemaParser.RPAR, 0); }
		public Set_eventContext(SetOptionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterSet_event(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitSet_event(this);
		}
	}

	public final SetOptionsContext setOptions() throws RecognitionException {
		SetOptionsContext _localctx = new SetOptionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setOptions);
		int _la;
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RELATION:
				_localctx = new Set_relationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(RELATION);
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRING) {
					{
					setState(148);
					match(STRING);
					setState(149);
					match(LPAR);
					setState(150);
					match(STRING);
					setState(151);
					match(COMMA);
					setState(152);
					match(STRING);
					setState(153);
					match(RPAR);
					}
				}

				}
				break;
			case EVENT:
				_localctx = new Set_eventContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(EVENT);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRING) {
					{
					setState(157);
					match(STRING);
					setState(158);
					match(LPAR);
					setState(159);
					stringlist();
					setState(160);
					match(RPAR);
					}
				}

				}
				break;
			case ENTITY:
				_localctx = new Set_entityContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				match(ENTITY);
				setState(165);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamDeclaredContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(schemaParser.FOR, 0); }
		public TerminalNode STRING() { return getToken(schemaParser.STRING, 0); }
		public ParamDeclaredContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDeclared; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).enterParamDeclared(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof schemaListener ) ((schemaListener)listener).exitParamDeclared(this);
		}
	}
